# akm

./: .env.example  .gitignore  .vercelignore  README.md  main.py  openapi.json  pyproject.toml  requirements.txt  vercel.json
alembic/versions/: 0c36bd5048dc_add_project_configurations_table.py  36af276ef713_seed_initial_data.py  add_seed_scope_delete_all.py  e1dd99f6c0b2_initial_schema_multi_tenant_with_global_.py
alembic/versions_backup_20251120_231619/: 001_create_api_keys_table.py  002_create_akm_tables.py  004_add_sensitive_fields.py
alembic/versions_backup_20251120_231626/: 003_update_audit_logs.py
data/: scopes.json  scopes_schema.json  sensitive_fields.json
docs/: ADMINISTRATION.md  API_KEY_MANAGEMENT.md  API_VERSIONING.md  ARCHITECTURE_ISSUES_AND_IMPROVEMENTS.md  AUDIT_IMPLEMENTATION_SUMMARY.md  AUDIT_SYSTEM.md  AUTHENTICATION.md  BULK_SCOPES_EXAMPLES.md  MIGRATION_VERSIONING.md  OPENAPI_EXAMPLES.md  QUICKSTART.md  REFACTORING_SUMMARY.md  VERSIONING_QUICKSTART.md  index.html
docs/admin/: AKM_SYSTEM.md  API_KEY_MANAGEMENT.md  AUDIT_QUICK_START.md  BULK_SCOPES.md  DYNAMIC_CONFIGURATION.md  SENSITIVE_FIELDS.md  SENSITIVE_FIELDS_IMPLEMENTATION_SUMMARY.md  TESTING.md
docs/guides/: ADMINISTRATION.md  ALERTS.md  AUTHENTICATION.md  CONFIGURATION_GUIDE.md  DEVELOPER_GUIDE.md  OPENAPI_SCOPE_GENERATION.md  QUICKSTART.md  SCOPES_BULK_INSERT.md  SENSITIVE_FIELDS_USAGE.md  WEBHOOKS.md
postman/collections/: 50303272-07e47c23-47ef-4912-b5ff-986574eff550.json
public/: administration.html  akm_postman_collection.json  api-key-management.html  deployment.html  docs_index.html  home.html
public - Copia/: home.html  quickstart.html  testing.html
public/admin/: api_key_management.html  audit_quick_start.html  authentication_summary.html  bulk_scopes.html  dynamic_configuration.html  index.html  sensitive_fields.html  sensitive_fields_implementation.html
public/duplicated/: api-key-management.html  api-versioning.html  deployment.html  home.html
public/guides/: alerts.html  configuration_guide.html  openapi_examples.html  webhooks.html
scripts/: check_db_structure.py  convert_docs_to_html.py  drop_all_tables.py  generate_admin_key.py  seed_bulk_scope_permissions.py  seed_project_config_scopes.py  update_admin_key_scopes.py  update_docs_links.py  verify_migration.py
src/: audit_logger.py  config.py  logging_config.py  sensitive_field_manager.py
tests/: README.md  conftest.py
(+85 files in other folders)
