[project]
name = "api-key-management"
version = "1.0.0"
description = "API Key Management Service"
requires-python = ">=3.10"

# -------------------------------------------------------------------
# Runtime Dependencies (only what your application needs to run)
# -------------------------------------------------------------------
dependencies = [
    # Core Framework
    "fastapi==0.121.2",
    "uvicorn[standard]==0.38.0",
    "starlette==0.49.3",

    # Data Validation
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",

    # Configuration
    "python-dotenv==1.2.1",

    # Logging & Monitoring
    "python-json-logger==3.2.1",
    "logtail-python==0.3.1",

    # Server & Utilities
    "h11==0.16.0",
    "httptools==0.7.1",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
    "PyYAML==6.0.3",

    # CLI & Async
    "click==8.3.1",
    "anyio==4.11.0",
    "sniffio==1.3.1",
    "idna==3.11",

    # Type Support
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "annotated-types==0.7.0",

    # Documentation Tools
    "markdown==3.7",

    # HTTP Clients
    "httpx==0.28.1",
    "requests==2.32.3",

    # Database & Migrations
    "sqlalchemy[asyncio]==2.0.36",
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.10",
    "greenlet==3.1.1",

    # Utilities
    "colorama==0.4.6"
]

# -------------------------------------------------------------------
# Development Dependencies (ONLY for tests, tooling, etc.)
# -------------------------------------------------------------------
[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "faker==34.0.0",
    "aiosqlite==0.20.0",

    # Code Quality
    "black==24.10.0",
    "flake8==7.1.1"
]

# -------------------------------------------------------------------
# Entry points — caso você queira futura integração com CLI
# -------------------------------------------------------------------
[project.scripts]
# Exemplo:
# api-key-cli = "src.cli:main"

# -------------------------------------------------------------------
# Build system
# -------------------------------------------------------------------
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
